--- a/src/components/dashboard-page/Token/MintingChartWidget/style.scss
+++ b/src/components/dashboard-page/Token/MintingChartWidget/style.scss
@@ -10,4 +10,16 @@
     flex-wrap: wrap;
     gap: 16px;
   }
+
+  &__alt-heading {
+    & .dashboard-widget-heading__info-wrapper {
+      @media #{$screen-min-dashboard-xs} {
+        right: 0;
+      }
+
+      @media #{$screen-min-dashboard-md} {
+        right: -53px;
+      }
+    }
+  }
 }
