--- a/src/components/dashboard-page/Token/RoiTableWidget/style.scss
+++ b/src/components/dashboard-page/Token/RoiTableWidget/style.scss
@@ -8,6 +8,14 @@
     @include dashboard-widget-heading-padding;
     margin-bottom: 16px;
 
+    & .dashboard-widget-heading__info-wrapper {
+      right: 0;
+
+      @media #{$screen-min-dashboard-xs} {
+        right: -53px;
+      }
+    }
+
     @media #{$screen-min-dashboard-md} {
       padding-right: 0;
     }
