loading state handler initial implementation

--- a/src/components/dashboard-page/Comparison/Positioning/style.scss
+++ b/src/components/dashboard-page/Comparison/Positioning/style.scss
@@ -52,6 +52,12 @@
       & > td {
         height: 1px;
       }
+
+      @-moz-document url-prefix() {
+        & > td {
+          height: 100%;
+        }
+      }
     }
   }
 
