fallback values added

--- a/src/components/dashboard-page/Token/Skeletons/style.scss
+++ b/src/components/dashboard-page/Token/Skeletons/style.scss
@@ -109,6 +109,7 @@
 
   @media #{$screen-min-dashboard-md} {
     & {
+      max-height: none;
       gap: 24px;
       grid-template-columns: repeat(4, 1fr);
     }
