ui/ux feedback addressed

--- a/src/components/dashboard-page/Community/SocialMedia/style.scss
+++ b/src/components/dashboard-page/Community/SocialMedia/style.scss
@@ -47,6 +47,11 @@
 
   &__supplemental-stats {
     @include dashboard-widget-helper-text;
+
+    &.hidden {
+      opacity: 0;
+      visibility: hidden;
+    }
   }
 
   &__secondary-stats-block {
