--- a/src/components/dashboard-page/StatsWidget/style.scss
+++ b/src/components/dashboard-page/StatsWidget/style.scss
@@ -15,6 +15,12 @@
     @include dashboard-widget-helper-text;
   }
 
+  @media #{$screen-min-dashboard-sm} {
+    &__text.with-text-size-increased-from-md {
+      @include h700;
+    }
+  }
+
   @media #{$screen-min-dashboard-md} {
     &__text.with-text-size-increased-from-md {
       @include h800;
