--- a/src/components/dashboard-page/Token/PriceChart/style.scss
+++ b/src/components/dashboard-page/Token/PriceChart/style.scss
@@ -3,6 +3,7 @@
 .custom-axis-tick {
   @include t100;
   color: $dashboard-charts-base-tick-color;
+  fill: $dashboard-charts-base-tick-color;
   font-feature-settings: $dashboard-font-feature-settings;
 }
 
