--- a/src/components/dashboard-page/Token/Skeletons/style.scss
+++ b/src/components/dashboard-page/Token/Skeletons/style.scss
@@ -180,11 +180,19 @@
   &__roi {
     width: 100%;
     height: 512px;
+
+    &.height-auto {
+      height: auto;
+    }
   }
 
   &__supply {
     width: 100%;
     height: 512px;
+
+    &.height-auto {
+      height: auto;
+    }
   }
 
   @media #{$screen-min-dashboard-md} {
