Remove build future with us section from landing page, move token metrics section from landing page to token page

--- a/src/components/index-page/JoystreamDAO/style.scss
+++ b/src/components/index-page/JoystreamDAO/style.scss
@@ -4,7 +4,7 @@
 
 .IndexPage {
   &__joystream-dao-wrapper {
-    padding: 96px 32px 0 32px;
+    padding: 96px 32px;
     background-color: #f2f5f9;
   }
 
@@ -239,7 +239,7 @@
 
   @media (max-width: 1024px) {
     &__joystream-dao-wrapper {
-      padding: 64px 16px 0 16px;
+      padding: 64px 16px;
     }
 
     &__joystream-dao {
