--- a/src/components/index-page/Tokenomics/style.scss
+++ b/src/components/index-page/Tokenomics/style.scss
@@ -4,8 +4,7 @@
 
 .IndexPage {
   &__tokenomics-wrapper {
-    padding: 96px 32px;
-    background-color: #111316;
+    padding: 0 32px;
   }
 
   &__tokenomics {
@@ -33,7 +32,6 @@
 
     &__metrics {
       display: grid;
-      margin-top: 72px;
       gap: 24px;
       grid-column: 2 / 12;
       grid-template-areas:
@@ -222,9 +220,9 @@
     }
   }
 
-  @media (max-width: 1024px) {
+  @media (max-width: 992px) {
     &__tokenomics-wrapper {
-      padding: 64px 16px;
+      padding: 32px 16px 0 16px;
     }
 
     &__tokenomics {
