--- a/src/components/dashboard-page/Token/Exchange/style.scss
+++ b/src/components/dashboard-page/Token/Exchange/style.scss
@@ -100,6 +100,18 @@
     opacity: 0.8;
     border-radius: 8px;
     backdrop-filter: blur(2px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    &__text {
+      @include t200;
+
+      margin-top: 8px;
+      font-weight: 600;
+      color: #B5C1C9;
+    }
   }
 
   &__button-toggle-shown-options {
